--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.8",
+    "@typechain/ethers-v5": "^11.1.2",
     "@typechain/ethers-v6": "^0.5.0",
-    "@typechain/hardhat": "^9.0.0",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.16",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.14.2",
     "chai": "^4.2.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.4.0",
@@ -21,6 +25,8 @@
     "prettier": "^3.3.2",
     "prettier-plugin-solidity": "^1.3.1",
     "solidity-coverage": "^0.8.12",
-    "typechain": "^8.3.0"
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
+    "typescript": "^5.4.5"
   }
 }
